# bioos-mcp-server

./: .gitignore  Dockerfile  README.md  bioos-mcp-prompt-en.md  bioos-mcp-prompt.md  pyproject.toml  requirements.txt
images/ies/etc/s6-overlay/s6-rc.d/init-code-server/: run
src/bioos_mcp/: __init__.py  bioos_mcp_server.py  dockstore_mcp_server.py  dockstore_prompt.txt
src/bioos_mcp/tools/: __init__.py  compose.py  compose_tools.py  dockstore_search.py  dockstore_search_bark.py  fetch_wdl_from_dockstore.py  output_demo.py  rerank_client.py  test_dockstore.py  wf_select.py  workspace_profile.py
src/workflows/cellplex/scrna-seq-fastq-to-matrix-10x-cellplex/: workflow_meta.json
src/workflows/dragen-somatic-germline/dragen-somatic-with-germline-pipeline_4_2_4/: workflow_meta.json
