[project]
name = "bioos-mcp"
version = "0.1.0"
description = "Bio-OS MCP Server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.1",
    "requests>=2.19.1,<2.26.0",
    "pybioos>=0.0.14"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bioos_mcp"] 
